-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7
-
None
-
-
71e87993d (dev), 5d1b211ab (6.7)
From developer point of view who uses Qt6 its unclear about text en/decoding support in Qt. You can't find proper information how to deal with codepages other than Unicode and Latin-1.
Old QTextCodec was moved Qt5Compat and there is no information about recently added ICU backend to QStringConverter.
https://doc.qt.io/qt-6/qstringconverter.html
And icu support hidden behind QStringConverter::Flag::UsesIcu flag? It works automatically or developer should set that flag explicitly? None such information available.
https://codereview.qt-project.org/c/qt/qtbase/+/417200/3/src/corelib/text/qstringconverter.cpp
For Gerrit Dashboard: QTBUG-124221 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
553955,2 | QStringConverter/Doc: add more details about additional codecs | dev | qt/qtbase | Status: MERGED | +2 | 0 |
556128,2 | QStringConverter/Doc: add more details about additional codecs | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |