QStringConverter/Doc: add more details about additional codecs

Fixes: QTBUG-124221
Change-Id: If1bf59ecbe014b569ba1fffd17c4d113d02425eb
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit 71e87993d6bb9c3bf61883d66f97a5e0cfa2bfb1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>